// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for 03.asynchronous 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        placeholder="Type here to simulate an API backed search"
        value=""
      />
    </DropMenu.Control>
    <DropMenu.FixedOption
      className="lucid-SearchableMultiSelect-Option-select-all"
      isDisabled={false}
      isHidden={true}
      isWrapped={true}
      key="SearchableMultiSelectOption-select-all"
    >
      <CheckboxLabeled
        Label="Select All"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={true}
        onSelect={[Function]}
      />
    </DropMenu.FixedOption>
  </DropMenu>
</div>
`;

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for 04.grouped-options 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value=""
      />
    </DropMenu.Control>
    <DropMenu.FixedOption
      className="lucid-SearchableMultiSelect-Option-select-all"
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption-select-all"
    >
      <CheckboxLabeled
        Label="Select All"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      />
    </DropMenu.FixedOption>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableMultiSelectOptionGroup0"
    >
      Northeast
      <SearchableMultiSelect.Option>
        Connecticut
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Delaware
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Maine
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Maryland
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Massachusetts
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        New Hampshire
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        New Jersey
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        New York
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Pennsylvania
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Rhode Island
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Vermont
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption0"
      >
        <CheckboxLabeled
          callbackId={0}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Connecticut
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption1"
      >
        <CheckboxLabeled
          callbackId={1}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Delaware
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption2"
      >
        <CheckboxLabeled
          callbackId={2}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Maine
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption3"
      >
        <CheckboxLabeled
          callbackId={3}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Maryland
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption4"
      >
        <CheckboxLabeled
          callbackId={4}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Massachusetts
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption5"
      >
        <CheckboxLabeled
          callbackId={5}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              New Hampshire
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption6"
      >
        <CheckboxLabeled
          callbackId={6}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              New Jersey
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption7"
      >
        <CheckboxLabeled
          callbackId={7}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              New York
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption8"
      >
        <CheckboxLabeled
          callbackId={8}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Pennsylvania
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption9"
      >
        <CheckboxLabeled
          callbackId={9}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Rhode Island
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption10"
      >
        <CheckboxLabeled
          callbackId={10}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Vermont
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableMultiSelectOptionGroup1"
    >
      Southeast
      <SearchableMultiSelect.Option>
        Alabama
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Arkansas
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Florida
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Georgia
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Kentucky
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Louisiana
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Mississippi
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        North Carolina
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        South Carolina
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Tennessee
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Virginia
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        West Virginia
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption11"
      >
        <CheckboxLabeled
          callbackId={11}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Alabama
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption12"
      >
        <CheckboxLabeled
          callbackId={12}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Arkansas
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption13"
      >
        <CheckboxLabeled
          callbackId={13}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Florida
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption14"
      >
        <CheckboxLabeled
          callbackId={14}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Georgia
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption15"
      >
        <CheckboxLabeled
          callbackId={15}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Kentucky
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption16"
      >
        <CheckboxLabeled
          callbackId={16}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Louisiana
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption17"
      >
        <CheckboxLabeled
          callbackId={17}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Mississippi
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption18"
      >
        <CheckboxLabeled
          callbackId={18}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              North Carolina
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption19"
      >
        <CheckboxLabeled
          callbackId={19}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              South Carolina
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption20"
      >
        <CheckboxLabeled
          callbackId={20}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Tennessee
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption21"
      >
        <CheckboxLabeled
          callbackId={21}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Virginia
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption22"
      >
        <CheckboxLabeled
          callbackId={22}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              West Virginia
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableMultiSelectOptionGroup2"
    >
      Midwest
      <SearchableMultiSelect.Option>
        Illinois
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Indiana
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Iowa
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Kansas
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Michigan
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Minnesota
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Missouri
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Nebraska
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        North Dakota
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Ohio
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        South Dakota
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Wisconsin
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption23"
      >
        <CheckboxLabeled
          callbackId={23}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Illinois
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption24"
      >
        <CheckboxLabeled
          callbackId={24}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Indiana
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption25"
      >
        <CheckboxLabeled
          callbackId={25}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Iowa
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption26"
      >
        <CheckboxLabeled
          callbackId={26}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Kansas
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption27"
      >
        <CheckboxLabeled
          callbackId={27}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Michigan
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption28"
      >
        <CheckboxLabeled
          callbackId={28}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Minnesota
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption29"
      >
        <CheckboxLabeled
          callbackId={29}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Missouri
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption30"
      >
        <CheckboxLabeled
          callbackId={30}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Nebraska
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption31"
      >
        <CheckboxLabeled
          callbackId={31}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              North Dakota
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption32"
      >
        <CheckboxLabeled
          callbackId={32}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Ohio
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption33"
      >
        <CheckboxLabeled
          callbackId={33}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              South Dakota
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption34"
      >
        <CheckboxLabeled
          callbackId={34}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Wisconsin
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableMultiSelectOptionGroup3"
    >
      Southwest
      <SearchableMultiSelect.Option>
        Arizona
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        New Mexico
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Oklahoma
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Texas
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption35"
      >
        <CheckboxLabeled
          callbackId={35}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Arizona
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption36"
      >
        <CheckboxLabeled
          callbackId={36}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              New Mexico
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption37"
      >
        <CheckboxLabeled
          callbackId={37}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Oklahoma
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption38"
      >
        <CheckboxLabeled
          callbackId={38}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Texas
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableMultiSelectOptionGroup4"
    >
      West
      <SearchableMultiSelect.Option>
        California
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Colorado
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Idaho
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Montana
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Nevada
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Oregon
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Utah
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Washington
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Wyoming
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption39"
      >
        <CheckboxLabeled
          callbackId={39}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              California
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption40"
      >
        <CheckboxLabeled
          callbackId={40}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Colorado
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption41"
      >
        <CheckboxLabeled
          callbackId={41}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Idaho
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption42"
      >
        <CheckboxLabeled
          callbackId={42}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Montana
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption43"
      >
        <CheckboxLabeled
          callbackId={43}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Nevada
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption44"
      >
        <CheckboxLabeled
          callbackId={44}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Oregon
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption45"
      >
        <CheckboxLabeled
          callbackId={45}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Utah
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption46"
      >
        <CheckboxLabeled
          callbackId={46}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Washington
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption47"
      >
        <CheckboxLabeled
          callbackId={47}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
              key="post"
            >
              Wyoming
            </span>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption48"
    >
      <CheckboxLabeled
        callbackId={48}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Alaska
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption49"
    >
      <CheckboxLabeled
        callbackId={49}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Hawaii
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
  </DropMenu>
</div>
`;

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for 05.custom-selection-label 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value=""
      />
    </DropMenu.Control>
    <DropMenu.FixedOption
      className="lucid-SearchableMultiSelect-Option-select-all"
      isDisabled={false}
      isHidden={true}
      isWrapped={true}
      key="SearchableMultiSelectOption-select-all"
    >
      <CheckboxLabeled
        Label="Select All"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      />
    </DropMenu.FixedOption>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption0"
    >
      <CheckboxLabeled
        callbackId={0}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Alabama
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption1"
    >
      <CheckboxLabeled
        callbackId={1}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Alaska
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption2"
    >
      <CheckboxLabeled
        callbackId={2}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Arizona
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption3"
    >
      <CheckboxLabeled
        callbackId={3}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Arkansas
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption4"
    >
      <CheckboxLabeled
        callbackId={4}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            California
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption5"
    >
      <CheckboxLabeled
        callbackId={5}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Colorado
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption6"
    >
      <CheckboxLabeled
        callbackId={6}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Connecticut
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption7"
    >
      <CheckboxLabeled
        callbackId={7}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Delaware
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption8"
    >
      <CheckboxLabeled
        callbackId={8}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Florida
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption9"
    >
      <CheckboxLabeled
        callbackId={9}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Georgia
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption10"
    >
      <CheckboxLabeled
        callbackId={10}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Hawaii
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption11"
    >
      <CheckboxLabeled
        callbackId={11}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Idaho
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption12"
    >
      <CheckboxLabeled
        callbackId={12}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Illinois
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption13"
    >
      <CheckboxLabeled
        callbackId={13}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Indiana
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption14"
    >
      <CheckboxLabeled
        callbackId={14}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Iowa
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption15"
    >
      <CheckboxLabeled
        callbackId={15}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Kansas
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption16"
    >
      <CheckboxLabeled
        callbackId={16}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Kentucky
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption17"
    >
      <CheckboxLabeled
        callbackId={17}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Louisiana
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption18"
    >
      <CheckboxLabeled
        callbackId={18}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Maine
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption19"
    >
      <CheckboxLabeled
        callbackId={19}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Maryland
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption20"
    >
      <CheckboxLabeled
        callbackId={20}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Massachusetts
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption21"
    >
      <CheckboxLabeled
        callbackId={21}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Michigan
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption22"
    >
      <CheckboxLabeled
        callbackId={22}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Minnesota
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption23"
    >
      <CheckboxLabeled
        callbackId={23}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Mississippi
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption24"
    >
      <CheckboxLabeled
        callbackId={24}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Missouri
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption25"
    >
      <CheckboxLabeled
        callbackId={25}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Montana Nebraska
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption26"
    >
      <CheckboxLabeled
        callbackId={26}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Nevada
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption27"
    >
      <CheckboxLabeled
        callbackId={27}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            New Hampshire
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption28"
    >
      <CheckboxLabeled
        callbackId={28}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            New Jersey
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption29"
    >
      <CheckboxLabeled
        callbackId={29}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            New Mexico
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption30"
    >
      <CheckboxLabeled
        callbackId={30}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            New York
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption31"
    >
      <CheckboxLabeled
        callbackId={31}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            North Carolina
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption32"
    >
      <CheckboxLabeled
        callbackId={32}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            North Dakota
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption33"
    >
      <CheckboxLabeled
        callbackId={33}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Ohio
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption34"
    >
      <CheckboxLabeled
        callbackId={34}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Oklahoma
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption35"
    >
      <CheckboxLabeled
        callbackId={35}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Oregon
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption36"
    >
      <CheckboxLabeled
        callbackId={36}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Pennsylvania Rhode Island
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption37"
    >
      <CheckboxLabeled
        callbackId={37}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            South Carolina
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption38"
    >
      <CheckboxLabeled
        callbackId={38}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            South Dakota
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption39"
    >
      <CheckboxLabeled
        callbackId={39}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Tennessee
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption40"
    >
      <CheckboxLabeled
        callbackId={40}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Texas
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption41"
    >
      <CheckboxLabeled
        callbackId={41}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Utah
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption42"
    >
      <CheckboxLabeled
        callbackId={42}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Vermont
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption43"
    >
      <CheckboxLabeled
        callbackId={43}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Virginia
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption44"
    >
      <CheckboxLabeled
        callbackId={44}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Washington
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption45"
    >
      <CheckboxLabeled
        callbackId={45}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            West Virginia
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption46"
    >
      <CheckboxLabeled
        callbackId={46}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Wisconsin
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption47"
    >
      <CheckboxLabeled
        callbackId={47}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
            key="post"
          >
            Wyoming
          </span>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
  </DropMenu>
</div>
`;

exports[`SearchableMultiSelect custom formatting should render Option child function by passing in {searchText}, setting filterText on each option and using a custom optionFilter 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value="tion"
      />
    </DropMenu.Control>
    <DropMenu.FixedOption
      className="lucid-SearchableMultiSelect-Option-select-all"
      isDisabled={false}
      isHidden={true}
      isWrapped={true}
      key="SearchableMultiSelectOption-select-all"
    >
      <CheckboxLabeled
        Label="Select All"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      />
    </DropMenu.FixedOption>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption0"
      name="OptionA"
    >
      <CheckboxLabeled
        callbackId={0}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <Component
            searchText="tion"
          />
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption1"
      name="OptionB"
    >
      <CheckboxLabeled
        callbackId={1}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <Component
            searchText="tion"
          />
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption2"
      name="OptionC"
    >
      <CheckboxLabeled
        callbackId={2}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <Component
            searchText="tion"
          />
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
  </DropMenu>
</div>
`;

exports[`SearchableMultiSelect custom formatting should render Option.Selected in the SelectedItems area 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value=""
      />
    </DropMenu.Control>
    <DropMenu.FixedOption
      className="lucid-SearchableMultiSelect-Option-select-all"
      isDisabled={false}
      isHidden={true}
      isWrapped={true}
      key="SearchableMultiSelectOption-select-all"
    >
      <CheckboxLabeled
        Label="Select All"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={true}
        isSelected={false}
        onSelect={[Function]}
      />
    </DropMenu.FixedOption>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption0"
      name="OptionA"
    >
      <CheckboxLabeled
        callbackId={0}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div
              style={
                Object {
                  "width": 100,
                }
              }
            >
              id
            </div>
            <div>
              option a
            </div>
          </div>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption1"
      name="OptionB"
    >
      <CheckboxLabeled
        callbackId={1}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={true}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div
              style={
                Object {
                  "width": 100,
                }
              }
            >
              id
            </div>
            <div>
              option b
            </div>
          </div>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption2"
      name="OptionC"
    >
      <CheckboxLabeled
        callbackId={2}
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={true}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div
              style={
                Object {
                  "width": 100,
                }
              }
            >
              id
            </div>
            <div>
              option c
            </div>
          </div>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
  </DropMenu>
  <Selection
    className="lucid-SearchableMultiSelect-Selection-section"
    hasBackground={true}
    isBold={true}
    isRemovable={true}
    kind="container"
    onRemove={[Function]}
    responsiveMode="large"
  >
    <Selection.Label>
      Selected
    </Selection.Label>
    <Selection
      callbackId={1}
      hasBackground={false}
      isBold={false}
      isRemovable={true}
      key="1"
      kind="default"
      onRemove={[Function]}
      responsiveMode="large"
    >
      <Selection.Label>
        option b
      </Selection.Label>
    </Selection>
    <Selection
      callbackId={2}
      hasBackground={false}
      isBold={false}
      isRemovable={true}
      key="2"
      kind="default"
      onRemove={[Function]}
      responsiveMode="large"
    >
      <Selection.Label>
        option c
      </Selection.Label>
    </Selection>
  </Selection>
</div>
`;

exports[`SearchableMultiSelect custom formatting should render OptionGroup.Selected in the SelectedItems area 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value=""
      />
    </DropMenu.Control>
    <DropMenu.FixedOption
      className="lucid-SearchableMultiSelect-Option-select-all"
      isDisabled={false}
      isHidden={true}
      isWrapped={true}
      key="SearchableMultiSelectOption-select-all"
    >
      <CheckboxLabeled
        Label="Select All"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={true}
        isSelected={false}
        onSelect={[Function]}
      />
    </DropMenu.FixedOption>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableMultiSelectOptionGroup0"
    >
      Foo bar baz
      <SearchableMultiSelect.Option
        Selected="option a"
        name="OptionA"
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            style={
              Object {
                "width": 100,
              }
            }
          >
            id
          </div>
          <div>
            option a
          </div>
        </div>
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option
        Selected="option b"
        name="OptionB"
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            style={
              Object {
                "width": 100,
              }
            }
          >
            id
          </div>
          <div>
            option b
          </div>
        </div>
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option
        Selected="option c"
        name="OptionC"
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            style={
              Object {
                "width": 100,
              }
            }
          >
            id
          </div>
          <div>
            option c
          </div>
        </div>
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption0"
        name="OptionA"
      >
        <CheckboxLabeled
          callbackId={0}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              <div
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                id
              </div>
              <div>
                option a
              </div>
            </div>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption1"
        name="OptionB"
      >
        <CheckboxLabeled
          callbackId={1}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={true}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              <div
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                id
              </div>
              <div>
                option b
              </div>
            </div>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption2"
        name="OptionC"
      >
        <CheckboxLabeled
          callbackId={2}
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={true}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              <div
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                id
              </div>
              <div>
                option c
              </div>
            </div>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
  </DropMenu>
  <Selection
    className="lucid-SearchableMultiSelect-Selection-section"
    hasBackground={true}
    isBold={true}
    isRemovable={true}
    kind="container"
    onRemove={[Function]}
    responsiveMode="large"
  >
    <Selection.Label>
      Selected
    </Selection.Label>
    <Selection
      className="lucid-SearchableMultiSelect-Selection-group"
      hasBackground={false}
      isBold={true}
      isRemovable={false}
      key="optionGroup-0"
      kind="container"
      onRemove={[Function]}
      responsiveMode="large"
    >
      <Selection.Label>
        Selected Foo
      </Selection.Label>
      <Selection
        callbackId={1}
        hasBackground={false}
        isBold={false}
        isRemovable={true}
        key="1"
        kind="default"
        onRemove={[Function]}
        responsiveMode="large"
      >
        <Selection.Label>
          option b
        </Selection.Label>
      </Selection>
      <Selection
        callbackId={2}
        hasBackground={false}
        isBold={false}
        isRemovable={true}
        key="2"
        kind="default"
        onRemove={[Function]}
        responsiveMode="large"
      >
        <Selection.Label>
          option c
        </Selection.Label>
      </Selection>
    </Selection>
  </Selection>
</div>
`;
